--- a/Assets/guru.html
+++ b/Assets/guru.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GURU-BOT Status</title>
+    <title>Silver Fox Status</title>
     <style>
         body {
             font-family: Arial, sans-serif;
