--- a/Assets/guru.html
+++ b/Assets/guru.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GURU-BOT Status</title>
+    <title>DEVIL-BOT Status</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -70,6 +70,6 @@
     </style>
 </head>
 <body>
-    <div class="status">GURU BOT Online</div>
+    <div class="status">DEVIL BOT Online</div>
 </body>
 </html>
