--- a/Assets/guru.html
+++ b/Assets/guru.html
@@ -70,6 +70,6 @@
     </style>
 </head>
 <body>
-    <div class="status">GURU BOT Online</div>
+    <div class="status">MANNO BOT Online</div>
 </body>
 </html>
