--- a/index.html
+++ b/index.html
@@ -46,6 +46,18 @@
       margin: 0.3rem;
       display: inline-block;
     }
+    .badge-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px; 
+  margin-top: 20px;
+}
+
+.badge-container img {
+  width: 90%; 
+  max-width: 400px; /* don't let them grow too big on desktops */
+}
     #themeToggle {
       position: fixed;
       top: 20px;
@@ -97,7 +109,8 @@
     <img src="https://cdn.jsdelivr.net/gh/Guru322/api@Guru/K.jpg" alt="Guru">
   </a>
   <h1>GURU Ai</h1>
-  <div class="badges">
+  
+  <div class="badge-container">
     <a href="https://github.com/Guru322"><img src="https://img.shields.io/badge/GURU-BOT-black?style=for-the-badge&logo=telegram" alt="Guru Bot"></a>
     <a href="https://github.com/Guru322?tab=followers"><img src="https://img.shields.io/github/followers/Guru322?label=Followers&style=social" alt="Followers"></a>
     <a href="https://github.com/Guru322/GURU-BOT/stargazers/"><img src="https://img.shields.io/github/stars/Guru322/GURU-BOT?&style=social" alt="Stars"></a>
@@ -105,6 +118,7 @@
     <a href="https://github.com/Guru322/GURU-BOT/watchers"><img src="https://img.shields.io/github/watchers/Guru322/GURU-BOT?label=Watching&style=social" alt="Watching"></a>
     <a href="https://app.fossa.com/projects/git%2Bgithub.com%2FGuru322%2FGURU-BOT?ref=badge_shield"><img src="https://app.fossa.com/api/projects/git%2Bgithub.com%2FGuru322%2FGURU-BOT.svg?type=shield" alt="License"></a>
   </div>
+  
 </div>
 
 <div class="content">
